Fix overflowing error screen message

--- a/customize.dist/src/less2/include/loading.less
+++ b/customize.dist/src/less2/include/loading.less
@@ -99,6 +99,7 @@
         color: @cp_loading-fg;
         text-align: left;
         display: none;
+        overflow-y: auto;
         a {
             color: @cp_loading-link;
         }
